--- a/travelsFront/app/templates/registration.hbs
+++ b/travelsFront/app/templates/registration.hbs
@@ -1,30 +1,17 @@
+<h2 id="regTitle">Registration Form</h2>
+
 <form class="form-horizontal" {{action "register" on="submit"}}>
-	<div class="regForm">
+<div class="regForm">
     	<label for="name">Όνομα</label>
-    	{{input value=name type="text" placeholder="πχ. Γιώργος"}}
-  	</div>
+    	{{input value=name type="text"}}
+  	</div><br>
 
-  	<div class="regForm">
-    	<label for="surname">Eπώνυμο</label>
-    	{{input value=surname type="text" placeholder="πχ. Λεμονής"}}
-   	</div>
-
-  	<div class="regForm">
-    	<label for="taxRegNum">ΑΦΜ</label>
-    	{{input value=taxRegNum placeholder="πχ. 1234567893"}}
-    </div>
-
-  	<div class="regForm">
-    	<label for="iban">IBAN</label>
-    	{{input value=iban placeholder="πχ. GR1601101250000"}}
-   	</div>
-
-  	<div class="regForm">
-    	<label for="phone">Τηλέφωνο</label>
-    	{{input value=phone placeholder="πχ. 210-2222222"}}
-	</div>
-
-  	<button type="submit" class="btn">Register</button>
+<button type="submit" class="btn" {{action 'saveRegistration'}}>Register</button>
 </form>
 
+<h3>Currently Activated Users</h3>
+{{#each model as |user|}}
+	<h4>Name: {{user.name}}</h4>
+{{/each}}
+	
 {{outlet}}
