create login & signup forms

--- a/travelsFront/app/templates/index.hbs
+++ b/travelsFront/app/templates/index.hbs
@@ -1,8 +1,16 @@
-<div class="welcome">
-    <h2>Welcome to Travel Expenses App !</h2> 
+<div class="welcome" class="col-md-10">
+    <h2>Welcome to Travel Expenses!</h2> 
 </div>
 
-<div>
+<div class="col-md-1">
+	{{#link-to "signup"}}Sign Up{{/link-to}}
+</div>
+
+<div class="col-md-1">
+	{{#link-to "login"}}Log In{{/link-to}}
+</div>
+
+<div class="welcome" class="col-md-4">
 {{#link-to "registration"}}Click here to Register.{{/link-to}}
 </div>
  
