add functionality to signup form

--- a/travelsFront/app/templates/login.hbs
+++ b/travelsFront/app/templates/login.hbs
@@ -1,4 +1,4 @@
-<form class="form-horizontal" {{action "login" on="submit"}}>
+<form class="form-horizontal" class="col-md-10" {{action "login" on="submit"}}>
 
   	<div class="loginForm">
 
