--- a/travelsFront/app/templates/signup.hbs
+++ b/travelsFront/app/templates/signup.hbs
@@ -1,4 +1,4 @@
-<form class="form-horizontal" {{action "login" on="submit"}}>
+<form class="form-horizontal" class="col-md-10" {{action "signup" on="submit"}}>
 
   	<div class="signupForm">
 
@@ -18,5 +18,12 @@
 
   	<button type="submit" class="btn btn-primary">Sign Up</button>
 </form>
+
+<h3>Currently Activated Users</h3>
+{{#each model as |user|}}
+  <h4>username: {{user.username}}</h4>
+  <h4>username: {{user.password}}</h4>
+  <h4>username: {{user.email}}</h4>
+{{/each}}
 
 {{outlet}}
