add style to signup & login links

--- a/travelsFront/app/templates/index.hbs
+++ b/travelsFront/app/templates/index.hbs
@@ -3,11 +3,11 @@
 </div>
 
 <div class="col-md-1">
-	{{#link-to "signup"}}Sign Up{{/link-to}}
+	{{#link-to "signup"}}<button class="btn btn-primary">Sign Up</button>{{/link-to}}
 </div>
 
 <div class="col-md-1">
-	{{#link-to "login"}}Log In{{/link-to}}
+	{{#link-to "login"}}<button class="btn btn-primary">Log In</button>{{/link-to}}
 </div>
  
 {{outlet}}
