add credentials to RESTAdapter

--- a/travelsFront/app/templates/signup.hbs
+++ b/travelsFront/app/templates/signup.hbs
@@ -21,8 +21,8 @@
 <h3>Currently Activated Users</h3>
 {{#each model as |user|}}
   <h4>username: {{user.username}}</h4>
-  <h4>username: {{user.password}}</h4>
-  <h4>username: {{user.email}}</h4>
+  <h4>password: {{user.password}}</h4>
+  <h4>email: {{user.email}}</h4>
 {{/each}}
 
 {{outlet}}
