--- a/travelsFront/app/templates/signup.hbs
+++ b/travelsFront/app/templates/signup.hbs
@@ -23,10 +23,10 @@
 </div>
 
 <h3>Currently Activated Users</h3>
-{{#each model as |user|}}
-  <h4>username: {{user.username}}</h4>
-  <h4>password: {{user.password}}</h4>
-  <h4>email: {{user.email}}</h4>
+{{#each model as |account|}}
+  <h4>username: {{account.username}}</h4>
+  <h4>password: {{account.password}}</h4>
+  <h4>email: {{account.email}}</h4>
 {{/each}}
 
 {{outlet}}
