register user without email activation

--- a/travelsFront/app/templates/signup.hbs
+++ b/travelsFront/app/templates/signup.hbs
@@ -22,11 +22,11 @@
 </div>
 
 
-<h3>Currently Activated Users</h3>
+<!--<h3>Currently Activated Users</h3>
 {{#each model as |account|}}
   <h4>username: {{account.username}}</h4>
   <h4>password: {{account.password}}</h4>
   <h4>email: {{account.email}}</h4>
-{{/each}}
+{{/each}}-->
 
 {{outlet}}
