configure authenticator in environment

--- a/travelsFront/app/templates/profile.hbs
+++ b/travelsFront/app/templates/profile.hbs
@@ -1,5 +1,5 @@
 <div class="container">
-  <form class="form-horizontal col-md-10"  {{action "#we don't know yet" on="submit"}}>
+  <form class="form-horizontal col-md-10"  {{action "profileUpdate" on="submit"}}>
 
 	<div class="profileForm">
     <label>First Name</label><br>
@@ -36,7 +36,7 @@
   	{{input value=taxOffice type="text"}}
   	</div>
 
-  	<button type="submit" class="btn btn-primary">Sign Up</button>
+  	<button type="submit" class="btn btn-primary">Submit</button>
   </form>
 
 </div>
