--- a/travelsFront/app/templates/login.hbs
+++ b/travelsFront/app/templates/login.hbs
@@ -16,6 +16,10 @@
 
 	  	<button type="submit" class="btn btn-primary">Log in</button>
 	</form>
+</div>	
+
+<div class="col-md-1">
+	{{#link-to "profile"}}<button class="btn btn-primary">Profile</button>{{/link-to}}
 </div>
 
 {{outlet}}
