add style to logout button

--- a/travelsFront/app/templates/index.hbs
+++ b/travelsFront/app/templates/index.hbs
@@ -2,14 +2,14 @@
     <h2>Welcome to Travel Expenses!</h2> 
 </div>
 
-<div class="col-md-1">
+<!-- <div class="col-md-1">
 
 	{{#link-to "signup"}}<button class="btn btn-primary">Sign Up</button>{{/link-to}}
-</div>
+</div> -->
 
-<div class="col-md-1">
+<!-- <div class="col-md-1">
 
-	{{#link-to "login"}}<button class="btn btn-primary">Log In</button>{{/link-to}}
-</div>
+	{{#link-to "login"}}<button class="btn btn-primary">Login</button>{{/link-to}}
+</div> -->
  
 {{outlet}}
