--- a/travelsFront/app/templates/application.hbs
+++ b/travelsFront/app/templates/application.hbs
@@ -1,12 +1,17 @@
-<div class="menu">
-  
-  {{#if session.isAuthenticated}}
-    <a {{action 'invalidateSession'}}>Logout</a>
-  {{else}}
-    {{#link-to 'login'}}Login{{/link-to}}
-  {{/if}}
+<div class="menu col-md-12">
+
+	<div class="col-md-offset-11">
+
+		{{#link-to "signup"}}<button class="btn btn-primary">Sign Up</button>{{/link-to}}
+	  
+		{{#if session.isAuthenticated}}
+			<a {{action 'invalidateSession'}}><button class="btn btn-primary">Logout</button></a>
+		{{else}}
+		    {{#link-to 'login'}}<button class="btn btn-primary">Login</button>{{/link-to}}
+		{{/if}}
+	</div>
 </div>
 
-<div class="main">
+<div class="main col-md-12">
   {{outlet}}
 </div>
