change signup & login buttons position

--- a/travelsFront/app/templates/index.hbs
+++ b/travelsFront/app/templates/index.hbs
@@ -1,5 +1,9 @@
-<div class="welcome" class="col-md-10">
+<div class="welcome" class="col-md-12">
     <h2>Welcome to Travel Expenses!</h2> 
+</div>
+
+<div class="col-md-1">
+	{{#link-to "profile"}}<button class="btn btn-primary">Profile</button>{{/link-to}}
 </div>
 
 <!-- <div class="col-md-1">
