--- a/travelsFront/app/templates/login.hbs
+++ b/travelsFront/app/templates/login.hbs
@@ -21,8 +21,8 @@
 	</form>
 </div>	
 
-<div class="col-md-1">
+<!-- <div class="col-md-1">
 	{{#link-to "profile"}}<button class="btn btn-primary">Profile</button>{{/link-to}}
-</div>
+</div> -->
 
 {{outlet}}
