--- a/travelsFront/app/templates/profile.hbs
+++ b/travelsFront/app/templates/profile.hbs
@@ -1,66 +1,73 @@
 <div class="container">
-  <form class="form-horizontal col-md-10"  {{action "profileUpdate" on="submit"}}>
+	<form class="form-horizontal col-md-10"  {{action "profileUpdate" on="submit"}}>
 
-    <div class="profileForm">
-      <label>Username</label><br>
-      {{input value=model.username type="text"}}
-    </div>
+		<div class="profileForm">
+			<label>Username</label><br>
+			{{input value=model.username type="text"}}
+		</div>
 
-    <div class="profileForm">
-      <label>Email</label><br>
-      {{input value=model.email type="text"}}
-    </div>
+		<div class="profileForm">
+			<label>Email</label><br>
+			{{input value=model.email type="text"}}
+		</div>
 
-  	<div class="profileForm">
-      <label>First Name</label><br>
-    	{{input value=model.first_name type="text"}}
-  	</div>
+		<div class="profileForm">
+			<label>First Name</label><br>
+			{{input value=model.first_name type="text"}}
+		</div>
 
-  	<div class="profileForm">
-  	  <label>Last Name</label><br>
-    	{{input value=model.last_name type="text"}}
-  	</div>
+		<div class="profileForm">
+			<label>Last Name</label><br>
+			{{input value=model.last_name type="text"}}
+		</div>
 
-  	<div class="profileForm">
-    	<label>IBAN</label><br>
-    	{{input value=model.iban type="text"}}
-   	</div> 
-   
-   	<div class="profileForm">
-    	<label>Specialty</label><br>
-    	<!-- {{input value=model.specialty type="text"}} -->
-      <select onchange={{action "setSpecialty" value="target.value"}}>
-        {{#each specialties as |specialtyChoice|}}
-        
-          <option value={{specialtyChoice.id}} selected={{eq specialtyChoice.id model.specialtyID.id}}>{{specialtyChoice.name}}</option>
-        
-        {{/each}}
-      </select>
-    </div> 
+		<div class="profileForm">
+			<label>IBAN</label><br>
+			{{input value=model.iban type="text"}}
+		</div> 
 
-    <div class="profileForm">
-    	<label>Property</label><br>
-    	{{input value=model.propertyID type="text"}}
-    </div>
+		<div class="profileForm">
+			<label>Specialty</label><br>
+			<!-- {{input value=model.specialty type="text"}} -->
+			<select onchange={{action "setSpecialty" value="target.value"}}>
+				{{#each specialties as |specialtyChoice|}}
 
-    <div class="profileForm">
-    	<label>AFM</label><br>
-    	{{input value=model.taxRegNum type="text"}}
-    </div>
+				<option value={{specialtyChoice.id}} selected={{eq specialtyChoice.id model.specialtyID.id}}>{{specialtyChoice.name}}</option>
 
-    <div class="profileForm">
-    	<label>taxOffice</label><br>
-    	{{input value=model.taxOffice type="text"}}
-    </div>
+				{{/each}}
+			</select>
+		</div> 
 
-    <button type="submit" class="btn btn-primary">Submit</button>
-  </form>
+		<div class="profileForm">
+			<label>Kind</label><br>
+
+			<select onchange={{action "setKind" value="target.value"}}>
+				{{#each kinds as |kindChoice|}}
+
+				<option value={{kindChoice.id}} selected={{eq kindChoice.id model.userKind.id}}>{{kindChoice.name}}</option>
+
+				{{/each}}
+			</select>
+		</div>
+
+		<div class="profileForm">
+			<label>AFM</label><br>
+			{{input value=model.taxRegNum type="text"}}
+		</div>
+
+		<div class="profileForm">
+			<label>taxOffice</label><br>
+			{{input value=model.taxOffice type="text"}}
+		</div>
+
+		<button type="submit" class="btn btn-primary">Submit</button>
+	</form>
 
 </div>
 
 <!-- <h1>Show me all profiles</h1>
 {{#each model as |profile|}}
-  <h4>{{profile}}</h4>
+       <h4>{{profile}}</h4>
 {{/each}} -->
 
 {{outlet}}
