--- a/travelsFront/app/templates/signup.hbs
+++ b/travelsFront/app/templates/signup.hbs
@@ -1,9 +1,10 @@
 <div class="container">
+
 	<form class="form-horizontal col-md-10"  {{action "signup" on="submit"}}>
 
 		<div class="signupForm">
 			<label>Username</label><br>
-			{{input value=username type="text" key-up='clearUserErrorLabels'}}
+			{{input value=username type="text" key-up='clearUserErrorLabels' autofocus="autofocus"}}
 			{{#if (v-get model 'username' 'isInvalid') }}
 			<font color="red">{{v-get model 'username' 'message'}}</font>
 
@@ -12,18 +13,18 @@
 
 		</div>
 
-		<div class="signupForm">
+		<div class="signupForm form-group">
 			<label>Password</label><br>
-			{{input value=password type="password"}}
+			{{input value=password type="password" autofocus="autofocus"}}
 			{{#if (v-get model 'password' 'isInvalid') }}
 			<font color="red">{{v-get model 'password' 'message'}}</font>
 			{{/if}}
 
 		</div> 
 
-		<div class="signupForm">
+		<div class="signupForm form-group">
 			<label>Email</label><br>
-			{{input value=email type="text" key-up='clearEmailErrorLabels'}}
+			{{input value=email type="text" key-up='clearEmailErrorLabels' autofocus="autofocus"}}
 
 			{{#if (v-get model 'email' 'isInvalid') }}
 			<font color="red">{{v-get model 'email' 'message'}}</font>
