--- a/travelsFront/app/templates/navbar.hbs
+++ b/travelsFront/app/templates/navbar.hbs
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-fixed-top" role="navigation">
+<nav class="navbar" role="navigation">
     <div class="container">
 		<div id="navbar">
 			<h2>Welcome to Travel Expenses!</h2>
