--- a/travelsFront/app/templates/profile.hbs
+++ b/travelsFront/app/templates/profile.hbs
@@ -3,61 +3,49 @@
 	<label for="username">Logged in as: <font color="green">{{model.username}}</font></label>
 	<form class="form-horizontal col-md-10"  {{action "profileUpdate" on="submit"}}>
 
-<<<<<<< HEAD
-||||||| merged common ancestors
-		<div class="profileForm">
-			<label>Username</label><br>
-			{{input value=model.username type="text"}}
-		</div>
-=======
+
 		<div class="profileForm form-group">
 			<label>Username</label><br>
 			{{input value=model.username type="text" autofocus="autofocus"}}
 		</div>
->>>>>>> style forms
+
 
 		<div class="profileForm form-group">
 			<label>Email</label><br>
-<<<<<<< HEAD
+
 			{{input value=model.email type="text"}}
 			{{#if (v-get model 'email' 'isInvalid') }}
 			<font color="red">{{v-get model 'email' 'message'}}</font>
 			<!--<font color="red">{{message}}</font>-->
 			{{/if}}
-||||||| merged common ancestors
-			{{input value=model.email type="text"}}
-=======
 			{{input value=model.email type="text" autofocus="autofocus"}}
->>>>>>> style forms
+
 		</div>
 
 		<div class="profileForm form-group">
-			<label>First Name</label><br>
+			<label>Όνομα</label><br>
 			{{input value=model.first_name type="text" autofocus="autofocus"}}
 		</div>
 
 		<div class="profileForm form-group">
-			<label>Last Name</label><br>
+			<label>Επώνυμο</label><br>
 			{{input value=model.last_name type="text" autofocus="autofocus"}}
 		</div>
 
 		<div class="profileForm form-group">
 			<label>IBAN</label><br>
-<<<<<<< HEAD
+
 			{{input value=model.iban type="text"}}
 				{{#if (v-get model 'iban' 'isInvalid') }}
 			<font color="red">{{v-get model 'iban' 'message'}}</font>
 			{{/if}}
 
-||||||| merged common ancestors
-			{{input value=model.iban type="text"}}
-=======
 			{{input value=model.iban type="text" autofocus="autofocus"}}
->>>>>>> style forms
+
 		</div> 
 
 		<div class="profileForm form-group">
-			<label>Specialty</label><br>
+			<label>Ειδικότητα</label><br>
 			
 			<select onchange={{action "setSpecialty" value="target.value"}}>
 				{{#each specialties as |specialtyChoice|}}
@@ -69,7 +57,7 @@
 		</div> 
 
 		<div class="profileForm form-group">
-			<label>Kind</label><br>
+			<label>Ιδιότητα</label><br>
 
 			<select onchange={{action "setKind" value="target.value"}}>
 				{{#each kinds as |kindChoice|}}
@@ -81,22 +69,17 @@
 		</div>
 
 		<div class="profileForm form-group">
-			<label>AFM</label><br>
-<<<<<<< HEAD
-			{{input value=model.taxRegNum type="text"}}
+
+			<label>ΑΦΜ</label><br>
+
+			{{input value=model.taxRegNum type="text" autofocus="autofocus"}}
 			{{#if (v-get model 'taxRegNum' 'isInvalid') }}
 			<font color="red">{{v-get model 'taxRegNum' 'message'}}</font>
 			{{/if}}
-
-||||||| merged common ancestors
-			{{input value=model.taxRegNum type="text"}}
-=======
-			{{input value=model.taxRegNum type="text" autofocus="autofocus"}}
->>>>>>> style forms
 		</div>
 
 		<div class="profileForm form-group">
-			<label>Tax-Office</label><br>
+			<label>ΔΟΥ</label><br>
 			<select onchange={{action "setTaxOffice" value="target.value"}}>
 				{{#each tax-offices  as |taxOfficeChoice|}}
 
