--- a/travelsFront/app/templates/profile.hbs
+++ b/travelsFront/app/templates/profile.hbs
@@ -1,17 +1,15 @@
 <div class="container">
+
+	<label for="username">Logged in as: <font color="green">{{model.username}}</font></label>
 	<form class="form-horizontal col-md-10"  {{action "profileUpdate" on="submit"}}>
 
-		<div class="profileForm">
-			<label>Username</label><br>
-			{{input value=model.username type="text"}}
-		</div>
 
 		<div class="profileForm">
 			<label>Email</label><br>
 			{{input value=model.email type="text"}}
 			{{#if (v-get model 'email' 'isInvalid') }}
-				<font color="red">{{v-get model 'email' 'message'}}</font>
-				<!--<font color="red">{{message}}</font>-->
+			<font color="red">{{v-get model 'email' 'message'}}</font>
+			<!--<font color="red">{{message}}</font>-->
 			{{/if}}
 		</div>
 
@@ -36,7 +34,7 @@
 			<select onchange={{action "setSpecialty" value="target.value"}}>
 				{{#each specialties as |specialtyChoice|}}
 
-					<option value={{specialtyChoice.id}} selected={{eq specialtyChoice.id model.specialtyID.id}}>{{specialtyChoice.name}}</option>
+				<option value={{specialtyChoice.id}} selected={{eq specialtyChoice.id model.specialtyID.id}}>{{specialtyChoice.name}}</option>
 
 				{{/each}}
 			</select>
@@ -48,7 +46,7 @@
 			<select onchange={{action "setKind" value="target.value"}}>
 				{{#each kinds as |kindChoice|}}
 
-					<option value={{kindChoice.id}} selected={{eq kindChoice.id model.userKind.id}}>{{kindChoice.name}}</option>
+				<option value={{kindChoice.id}} selected={{eq kindChoice.id model.userKind.id}}>{{kindChoice.name}}</option>
 
 				{{/each}}
 			</select>
@@ -64,7 +62,7 @@
 			<select onchange={{action "setTaxOffice" value="target.value"}}>
 				{{#each tax-offices  as |taxOfficeChoice|}}
 
-					<option value={{taxOfficeChoice.id}} selected={{eq taxOfficeChoice.id model.taxOffice.id}}>{{taxOfficeChoice.name}}</option>
+				<option value={{taxOfficeChoice.id}} selected={{eq taxOfficeChoice.id model.taxOffice.id}}>{{taxOfficeChoice.name}}</option>
 
 				{{/each}}
 			</select>
